# unicode-animatio

./: .gitignore  .pre-commit-config.yaml  API_COMPATIBILITY.md  CODE_OF_CONDUCT.md  CODE_QUALITY.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  quality.yml  release.yml
docs/: README.md  cleanup-workflow.md  code-quality-enforcement.md  engineering-patterns.md  getting-started.md  source-tree-owner-map.md
examples/: terminal_demo.py
scripts/: release_check.py  validate_commit_message.py  validate_quality_patterns.py
scripts/baselines/: broad_exception_baseline.tsv  filename_underscore_hygiene.tsv  helper_duplicates_baseline.tsv  max_file_loc_baseline.tsv  method_loc_baseline.tsv  path_structure_hygiene.tsv
src/unicode_animations/: __init__.py  __main__.py  braille.py  catalog.py  cli.py  provider.py  web.py
tests/: expected_spinners.json  test_braille.py  test_catalog.py  test_cli.py  test_package.py  test_package_layout.py  test_package_metadata.py  test_provider.py  test_quality_scripts.py  test_web.py
