[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "unicode-animations"
version = "0.1.0"
description = "Unicode spinner animations as raw frame data for Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "unicode-animations contributors" },
]
keywords = ["braille", "spinner", "unicode", "animation", "loading", "cli", "terminal"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Topic :: Terminals",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/openminion/unicode-animations"
Repository = "https://github.com/openminion/unicode-animations"
Documentation = "https://github.com/openminion/unicode-animations/tree/main/docs"
Issues = "https://github.com/openminion/unicode-animations/issues"

[project.scripts]
unicode-animations = "unicode_animations.cli:main"
unicode-animations-web = "unicode_animations.web:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pre-commit>=4,<5",
  "pytest>=8.0.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/unicode_animations"]
